# aria-shell

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
aria_shell/: __init__.py  ariashell.py  config.py  gadget.py  module.py  ui.py
aria_shell/assets/: aria.conf  base.css  manjaro.css  waybar.css
aria_shell/assets/wallpapers/: test_03.shadertoy  test_04.shadertoy
aria_shell/components/: __init__.py  aria_component.py  cmd_socket.py  commands.py  component.py  exiter.py  idler.py  launcher (ListBox).py  launcher.py  locker.py  notificator.py  panel.py  terminal.py  wallpaper.py
aria_shell/gui/: __init__.py  box.py  dialog.py  mediapicture.py  popover.py  shadertoy.py  slider.py  window.py
aria_shell/i18n/: __init__.py  en.py  it.py
aria_shell/modules/: audio.py  button.py  clock.py  cpu.py  custom.py  perf.py  themeselector.py  tray.py  workspaces.py
aria_shell/services/: __init__.py  aria_service.py  audio.py  audio_mpris2.py  audio_pipewire.py  commands.py  dbus_menu.py  display.py  hyprland.py  notifications.py  pam.py  sway.py  themes.py  wayland.py  wm.py  xdg.py
aria_shell/utils/: __init__.py  _basic.py  _toolkit.py  env.py  logger.py  socket.py
tests/: test_observable.py  test_signalable.py  test_singleton.py  test_variant.py
